WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13123
CSS selectors that use :lang, :not, and namespaces do not serialize correctly
https://bugs.webkit.org/show_bug.cgi?id=13123
Summary
CSS selectors that use :lang, :not, and namespaces do not serialize correctly
Darin Adler
Reported
2007-03-19 16:15:00 PDT
CSS selectors that use :lang, :not, and namespaces do not serialize correctly. I noticed this while working on another bug awhile back and created a test case and fixes.
Attachments
patch, with change log and test case
(12.64 KB, patch)
2007-03-19 16:16 PDT
,
Darin Adler
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2007-03-19 16:16:03 PDT
Created
attachment 13709
[details]
patch, with change log and test case
mitz
Comment 2
2007-03-20 06:48:46 PDT
Comment on
attachment 13709
[details]
patch, with change log and test case The outer if block needs braces. + if (m_match == CSSSelector::None || !prefix.isNull() || localName != starAtom) + if (prefix.isNull()) + str = localName; + else + str = prefix + "|" + localName; r=me
Darin Adler
Comment 3
2007-03-24 20:04:16 PDT
Committed revision 20477.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug