LayoutTests:

Reviewed by Mitz.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13123
          CSS selectors that use :lang, :not, and namespaces do not serialize correctly

        * fast/css/css-selector-text-expected.txt: Added.
        * fast/css/css-selector-text.html: Added.

WebCore:

        Reviewed by Mitz.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13123
          CSS selectors that use :lang, :not, and namespaces do not serialize correctly

        Test: fast/css/css-selector-text.html

        * css/CSSSelector.cpp: (WebCore::CSSSelector::selectorText): Add the namespace
        prefix for tag or attribute names, the sub-selector for :not, and the argument
        for :lang.



Canonical link: https://commits.webkit.org/17217@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20477 268f45cc-cd09-0410-ab3c-d52691b4dbfc